<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">
    
	<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >
    	<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#700"
			android:textSize="30sp"
			android:textStyle="bold"
			android:text="@string/event_title" />
    	<TextView 
				android:id="@+id/agenda_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="30dp"
				android:layout_gravity="left"
				android:textSize="30sp"
				android:textStyle="italic"  
				android:text="@string/title" />
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >
    	<TextView  android:id="@+id/event_date"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/event_date" />
    	<TextView  android:id="@+id/event_time"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:paddingLeft="10dp"
				android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/event_time" />
    	<TextView 
				android:id="@+id/agenda_url"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="30dp"
				android:layout_gravity="left"
				android:textSize="25sp"
				android:textStyle="italic" 
				android:text="@string/url" /> 
	</LinearLayout>	
	<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >
    	<TextView  android:id="@+id/location_street"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/address_street" />
    	<TextView 
				android:id="@+id/agenda_city"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="30dp"
				android:layout_gravity="left"
				android:textSize="25sp"
				android:textStyle="italic" 
				android:text="@string/address_city" /> 
	</LinearLayout>	
	<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >
    	<TextView  android:id="@+id/event_host"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/event_host" />
    	<TextView 
				android:id="@+id/contact_number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="30dp"
				android:layout_gravity="left"
				android:textSize="25sp"
				android:textStyle="italic" 
				android:text="@string/contact_number" /> 
	</LinearLayout>	
	
	<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >
    	<TextView  android:id="@+id/description"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/description" />
	</LinearLayout>	
	<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >
    	<TextView  				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#707"
			android:textSize="20sp"
			android:textStyle="bold"
			android:text="@string/need_your_participate" />
	</LinearLayout>	

	
</LinearLayout>
</ScrollView>

