<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
  
        <TextView  android:id="@+id/taken_date"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/taken_date" />
        
     	<TextView 
				android:id="@+id/photo_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dp"
				android:layout_gravity="left"
				android:textSize="25sp"
				android:textStyle="italic"  
				android:text="@string/title" />
     	
     	<TextView  android:id="@+id/photo_description"				
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textColor="#700"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/description" />
 

</LinearLayout>
